fix encooding issue that cause wierd shi*e

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-﻿/*
+/*
 Theme Name: Thematic Html5Boilerplate
 Description: A theme based upon Thematic ToolBox using all the goodness of <a href="http://paulirish.com/">Paul Irish</a> &amp; <a href="">Divya Manian</a>&#039;s <a href="http://html5boilerplate.com/">HTML5 Boilerplate</a>. It is intended to work with some plugins (WP super cache &amp; WP Minify)
 Author: S Sherlock
