--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
 /*
-Theme Name: Thematic Html5Boilerplate
+Theme Name: Html5 Boilerplate
 Description: A theme based upon Thematic ToolBox using all the goodness of <a href="http://paulirish.com/">Paul Irish</a> &amp; <a href="">Divya Manian</a>&#039;s <a href="http://html5boilerplate.com/">HTML5 Boilerplate</a>. It is intended to work with some plugins (WP super cache &amp; WP Minify)
 Author: S Sherlock
 Author URI: http://samsherlock.com/
-Version: 0.01a
+Version: 0.02a
 Tags: translation-ready, microformats, rtl-language-support, optimization
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
 */
- 
+/* begin misc import  - in really world these are combinded into one with this block removed from here*/
 @import url("library/styles/core/grid/grids.css");
 @import url("library/styles/core/template/template.css");
 @import url("library/styles/core/module/mod.css");
+/* end misc import */
 
 /* 
   style.css contains a reset, font normalization and some base styles.
@@ -89,10 +90,9 @@ input, select { vertical-align:middle; }
   There are two custom edits:
    * remove arial, helvetica from explicit font stack
    * we normalize monospace styles ourselves
+   * table font-size is reset in the HTML5 reset above so there is no need to repeat
 */
 body { font:13px/1.231 sans-serif; *font-size:small; } /* hack retained to preserve specificity */
-
-table { font-size:inherit; font: 100%; }
 
 select, input, textarea, button { font:99% sans-serif; }
 
@@ -107,9 +107,12 @@ pre, code, kbd, samp { font-family: monospace, sans-serif; }
  * minimal base styles 
  */
 
-
-/* #444 looks better than black: twitter.com/H_FJ/statuses/11800719859 */ 
-body, select, input, textarea { color: #444; }
+body, select, input, textarea { 
+  /* #444 looks better than black: twitter.com/H_FJ/statuses/11800719859 */ 
+  color: #444; 
+  /* set your base font here, to apply evenly 
+  /* font-family: Georgia, serif;  */   
+}
 
 /* Headers (h1,h2,etc) have no default font-size or margin,
    you'll want to define those yourself. */ 
@@ -151,6 +154,10 @@ pre {
   word-wrap: break-word; /* IE */
 }
 
+textarea { overflow: auto; } /* thnx ivannikolic! www.sitepoint.com/blogs/2010/08/20/ie-remove-textarea-scrollbars/ */
+
+.ie6 legend, .ie7 legend { margin-left: -7px; } /* thnx ivannikolic! */
+
 /* align checkboxes, radios, text inputs with their label
    by: Thierry Koblentz tjkdesign.com/ez-css/css/base.css  */
 input[type="radio"] { vertical-align: text-bottom; }
@@ -161,8 +168,19 @@ input[type="checkbox"] { vertical-align: bottom; }
 /* hand cursor on clickable input elements */
 label, input[type=button], input[type=submit], button { cursor: pointer; }
 
+/* webkit browsers add a 2px margin outside the chrome of form elements */  
+button, input, select, textarea { margin: 0; }
+
 /* colors for form validity */
-input:invalid { background-color: #f0dddd; }
+input:invalid {
+	background-color: #f0dddd;
+      border-radius: 1px;
+    -moz-box-shadow: 0px 0px 5px red; 
+ -webkit-box-shadow: 0px 0px 5px red; 
+         box-shadow: 0px 0px 5px red;
+}
+.no-boxshadow input:invalid, 
+.no-boxshadow textarea:invalid { background-color: #f0dddd; }
 input:valid   { background-color: #ddf0dd; }
 
 /* These selection declarations have to be separate.
@@ -205,8 +223,8 @@ button {  width: auto; overflow: visible; }
 /* Hide visually and from screenreaders, but maintain layout */
 .invisible { visibility: hidden; }
 
-/* >> The Magnificent CLEARFIX << j.mp/phayesclearfix */
-.clearfix:after  { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
+.clearfix:after  { content: "\0020"; display: block; height: 0; clear: both; visibility: hidden; }
+/* Fix clearfix: blueprintcss.lighthouseapp.com/projects/15318/tickets/5-extra-margin-padding-bottom-of-page */
 .clearfix { zoom: 1; }
 
 
@@ -215,14 +233,114 @@ button {  width: auto; overflow: visible; }
 
 
  /* Primary Styles
-    Author: 
+    Author: S Sherlock
  */
 
 /**
  * Will add oocss here - later will include instructions for combining and compressing using wp-minify
+ * really this will be in a sep file and a snazzy way to allow a build of the css actually a range of options for this
+ * since if you forking the original then you may build there and slip those stallions to create unicorns 
  */
+ 
+/* screen */
 
-/* =Structure
+body {	width: 960px; margin: 0 auto;	}
+
+img {
+  -ms-interpolation-mode: bicubic;
+}
+
+.blurb {
+  border-style: solid;
+  border-width: 2px;
+  margin: 0 0 10px 0;
+  padding: 10px;
+}
+
+.blurb strong {
+  
+}
+
+.blurb p {
+  margin: 0;
+}
+
+.error.blurb {
+  background-color: #ffebeb;
+  border-color: #e65757;
+}
+
+.warning.blurb {
+  background-color: #ffffe5;
+  border-color: #d3b586;
+}
+
+.notice.blurb {
+  background-color: #eeffeb;
+  border-color: #3abe24;
+}
+
+
+/* section.content > section,
+section.content > article {
+  float: left;
+  width: 60%;
+}
+
+section.content > aside {
+  float: right;
+  width: 30%;
+}
+
+
+aside {
+  border-left: 1px solid #ccc;
+  float: right;
+  padding-left: 1em;
+  width: 25%;
+}  */
+section.content > section,
+section.content > article,
+section.content > aside {
+	margin:0.8em;
+	padding:0.5em 1.2em;
+}
+
+
+aside {
+  border-left: 1px solid #ccc;
+  padding-left: 1em;
+}
+
+aside nav {
+  
+}
+
+aside nav ul {
+  list-style-type: none;
+  margin: 0 0 1em;
+}
+
+aside nav li {
+  list-style-type: none;
+}
+
+aside nav li a {
+  background-color: #f0f0f0;
+  border-bottom: 1px solid #fff;
+  display: block;
+  padding: .25em .5em;
+  text-decoration: none;
+}
+
+aside nav li a:hover {
+  background-color: #ffc;
+}
+
+p.slab { font-family: "museo-sans-1", "museo-sans-2", helvetica, arial, serif; }
+p.sans { font-family: "museo-slab-1", "museo-slab-2", helvetica, arial, serif; }
+
+/* =Structure - todo become an example
 -------------------------------------------------------------- */
 
 #page {
@@ -559,10 +677,12 @@ textarea {
   h2, h3{ page-break-after: avoid; }
 }
 
+/* end stuff example */
+
 
 
 /*
- * Media queries for responsive design
+ * Media queries for responsive design - add some stuff from opera tutorials
  */
 
 @media all and (orientation:portrait) { 
