--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 */
 /* Import is bad um kay. SO you should be CnC the following sheets um kay use wp-minify um kay */
+/*
+	todo styles/ => css/ 
+@import url("library/css/style.css");
+@import url("library/css/core/grid/grids.css");
+@import url("library/css/core/template/template.css");
+@import url("library/css/core/module/mod.css");
+@import url("library/css/screen.css");
+@import url("library/css/all.css");
+@import url("library/css/media.css");
+*/
 @import url("library/styles/h5bp.css");
 @import url("library/styles/core/grid/grids.css");
 @import url("library/styles/core/template/template.css");
