the html5 boilerplate main css file is called styles.css and it lives inside the lib/css/ directory (it has the media stuff in media.css a sister file)

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 */
 /* Import is bad um kay. SO you should be CnC the following sheets um kay use wp-minify um kay */
-@import url("library/css/style.css");
+@import url("library/css/styles.css");
 @import url("library/css/core/grid/grids.css");
 @import url("library/css/core/template/template.css");
 @import url("library/css/core/module/mod.css");
