--- a/rtl.css
+++ b/rtl.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Thematic PFT
+Theme Name: Thematic rtl.css
 
 Adding support for language written in a Right To Left (RTL) direction is easy -
 it's just a matter of overwriting all the horizontal positioning attributes
