--- a/style.css
+++ b/style.css
@@ -12,9 +12,18 @@ Use it to make something cool, have fun, and share what you've learned with othe
 */
 /* Import is bad um kay. SO you should be CnC the following sheets um kay use wp-minify um kay */
 @import url("library/css/styles.css");
-@import url("library/css/core/grid/grids.css");
-@import url("library/css/core/template/template.css");
-@import url("library/css/core/module/mod.css");
-@import url("library/css/screen.css");
-@import url("library/css/all.css");
+@import url("library/css/grid/grids.css");
+@import url("library/css/template/template.css");
+@import url("library/css/module/mod.css");
+@import url("library/css/module/mod_skins.css");
+@import url("library/css/spacing/space.css");
+
+/* @import url("library/css/table/table.css"); */
+/* @import url("library/css/table/table_skins.css"); */
+/* @import url("library/css/talk/talk.css");
+@import url("library/css/talk/talk_skins.css"); */
 @import url("library/css/media.css");
+/* typography (see library/css/text/(oocss|azbuka|le-corbusier|...).css */
+@import url("library/css/text/le-corbusier.css");
+
+@import url("library/css/screen.css");
