--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Html5 Boilerplate
-Description: A theme based upon Thematic ToolBox using all the goodness of <a href="http://paulirish.com/">Paul Irish</a> &amp; <a href="">Divya Manian</a>&#039;s <a href="http://html5boilerplate.com/">HTML5 Boilerplate</a>. It is intended to work with some plugins (WP super cache &amp; WP Minify)
+Description: A theme based upon Thematic ToolBox using all the goodness of <a href="http://paulirish.com/">Paul Irish</a> &amp; <a href="http://nimbupani.com/">Divya Manian</a>&#039;s <a href="http://html5boilerplate.com/">HTML5 Boilerplate</a>. It is intended to work with some plugins (WP super cache &amp; WP Minify)
 Author: S Sherlock
 Author URI: http://samsherlock.com/
 Version: 0.03a
